Dynamic Template is Practiced

--- a/demo_project/demo_app/templates/demo_app/about.html
+++ b/demo_project/demo_app/templates/demo_app/about.html
@@ -6,7 +6,7 @@
     <title>About</title>
   </head>
   <body>
-    <h1>About Page</h1>
+    <h1>{{name}} Page</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, repellendus quia illum consequuntur sit enim nulla odit iusto cupiditate qui laborum delectus earum itaque reprehenderit porro soluta repudiandae temporibus unde.</p>
   </body>
 </html>
