--- a/demo_project/demo_app/templates/demo_app/home.html
+++ b/demo_project/demo_app/templates/demo_app/home.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="stylesheet" href="{% static 'demo_app/css/style.css' %}">
   </head>
   <body>
     <h1>{{name}} Page</h1>
+    <img src="{% static 'demo_app/images/1.jpeg' %}" width="350px" alt="Pic"> <br>
+    <button>Click</button>
+
+    <script src="{% static 'demo_app/js/script.js' %}"></script>
   </body>
 </html>
